--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	</head>
 	<body>
 		<div id="svg"></div>
-		<script src="../d3.js" type="text/javascript"></script>
+		<script src="d3.js" type="text/javascript"></script>
 		<script src="n4j.js" type="text/javascript"></script>
 	</body>
 </html>
